fix: table alignment

--- a/mediawiki/extensions/ChemExtension/skins/main.css
+++ b/mediawiki/extensions/ChemExtension/skins/main.css
@@ -516,3 +516,7 @@ table.formtable div.oo-ui-textInputWidget {
     max-width: 90% !important;
     width: 90% !important;
 }
+
+table.wikitable td p {
+    margin-bottom: 0rem;
+}
